add sphinx docs directory and dostring to snare.net.addr

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,4 +1,13 @@
+# Release requirements.
 setuptools
 wheel
 twine
+
+# Test requirements.
+pytest
+
+# Documentation requirements.
+Sphinx~=3.0.1
+
+# Development utilities.
 IPython
