--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,3 @@
 [pytest]
-addopts = --doctest-modules
+# Example.py requires a network to run against.
+addopts = --doctest-modules --ignore example.py
